Bug 387656 - Error dialog is displayed when enter Dashboard and Conjugations were practiced before
Summary: Error dialog is displayed when enter Dashboard and Conjugations were practice...
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-06 21:05 UTC by Hartmut Riesenbeck
Modified: 2018-04-19 14:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen shoot of error message (12.16 KB, image/png)
2017-12-06 21:05 UTC, Hartmut Riesenbeck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hartmut Riesenbeck 2017-12-06 21:05:38 UTC
Created attachment 109230 [details]
Screen shoot of error message

When last practice session was conjugation practice and currently no vocable are due, an error message is displayed when the application starts or dashboard is entered from statistics window. 
The error text is: "The vocabulary document contains no entries that can be used for the chosen type of practice."
After closing the dialog, parley works without problems.

Steps to Reproduce:
1) Start Parley
2) Open a vocable document for practice
3) Practice conjugations until no unpracticed vocable is left
4) Leave practice mode as it is
5) Save document
6) Go to dashboard or restart application

Actual Results:
The above mentioned error dialog is displayed.

Expected Results: 
No error dialog should be displayed.

Version:
Build from latest source code from git repository.
origin/Applications/17.12
Comment 1 Hartmut Riesenbeck 2017-12-11 20:15:02 UTC
Git commit c931d920049395f17e84b0eb3ea7edeb35bdd085 by Hartmut Riesenbeck.
Committed on 11/12/2017 at 20:13.
Pushed by hriesenbeck into branch 'master'.

[Parley] Fix false error message when entering dashboard

Summary:
When entering dashboard with conjugations as current practice mode, an
error message box is shown when no entries are due for practice. It
says: "The vocabulary document contains no entries that can be used for
the chosen type of practice."
For determining the word count of the collection widgets, the
EntryFilter class is used. A missing test for the showDialg flag was
added in the conjugation entries evaluation.

Reviewers: #kde_edu, apol

Reviewed By: apol

Subscribers: apol

Tags: #kde_edu

Differential Revision: https://phabricator.kde.org/D9246

M  +1    -1    src/collection/entryfilter.cpp

https://commits.kde.org/parley/c931d920049395f17e84b0eb3ea7edeb35bdd085